--- a/patterns/shop-checkout/style.scss
+++ b/patterns/shop-checkout/style.scss
@@ -1,44 +1,129 @@
 @use '@porsche-design-system/components-js/styles' as *;
 
-.foo {
+p, h2 {
+  margin: 0;
+}
+
+h1 {
+  text-align: center;
+  margin: $pds-spacing-fluid-medium 0;
+}
+
+#app {
   @include pds-grid;
 
-  p-wordmark {
-    @include pds-media-query-max('s') {
-      display: none;
-    }
-  }
-
-  p-crest {
-    @include pds-media-query-min('s') {
-      display: none;
-    }
-  }
-
-  &__header {
+  header {
     grid-row-start: 1;
     grid-column: $pds-grid-wide-column-start / $pds-grid-wide-column-end;
     display: grid;
     grid-template-columns: minmax(0, 1fr) auto minmax(0, 1fr);
     gap: $pds-spacing-fluid-small;
     align-items: center;
+    margin-top: $pds-spacing-fluid-medium;
 
     @include pds-media-query-min('s') {
       grid-row-start: 1;
       grid-column: $pds-grid-wide-column-start / span 11;
     }
+
+    p-wordmark {
+      @include pds-media-query-max('s') {
+        display: none;
+      }
+    }
+
+    p-crest {
+      @include pds-media-query-min('s') {
+        display: none;
+      }
+    }
   }
 
-  &__content {
+  main {
     grid-column: $pds-grid-wide-column-start / $pds-grid-wide-column-end;
 
     @include pds-media-query-min('s') {
       grid-row-start: 2;
       grid-column: $pds-grid-basic-column-start / span 7;
     }
+
+    .login {
+      h2 {
+        margin-top: $pds-spacing-fluid-medium;
+      }
+
+      &__inputs {
+        display: flex;
+        flex-direction: column;
+        gap: $pds-spacing-fluid-small;
+        margin-top: $pds-spacing-fluid-small;
+        &__actions {
+          display: flex;
+          justify-content: space-between;
+        }
+      }
+
+      p-button {
+        width: 100%;
+        margin: $pds-spacing-fluid-medium 0;
+      }
+
+      p-button:last-child {
+        margin-bottom: 0;
+      }
+
+      &__divider {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        p {
+          @include pds-text-x-small;
+          text-transform: uppercase;
+          padding: 0 $pds-spacing-fluid-medium;
+        }
+        p-divider {
+          width: 100%;
+        }
+      }
+    }
+
+    .checkout {
+      margin: $pds-spacing-fluid-medium 0;
+      section {
+        margin: $pds-spacing-fluid-medium 0;
+      }
+      &__heading {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-bottom: $pds-spacing-fluid-medium;
+      }
+      &__inputs {
+        display: flex;
+        gap: $pds-spacing-fluid-small;
+        margin: $pds-spacing-fluid-medium 0;
+        flex-direction: column;
+        &__name {
+          display: flex;
+          gap: $pds-spacing-fluid-small;
+          p-text-field-wrapper {
+            width: 100%;
+          }
+        }
+      }
+      p-radio-button-wrapper:not(:first-child) {
+        margin-top: $pds-spacing-fluid-x-small;
+      }
+      p-checkbox-wrapper {
+        margin-bottom: $pds-spacing-fluid-small;
+      }
+      p-button {
+        margin: $pds-spacing-fluid-medium 0;
+      }
+    }
   }
 
-  &__sidebar {
+  .shopping-cart {
     grid-area: 2 / $pds-grid-wide-column-start / auto / $pds-grid-wide-column-end;
     background: $pds-theme-light-background-surface;
     margin: 0 calc(#{$pds-grid-wide-offset-base} * -1);
@@ -46,9 +131,57 @@
 
     @include pds-media-query-min('s') {
       grid-row: 1 / 3;
-      grid-column: span 5 / $pds-grid-full-column-end;
+      grid-column: span 6 / $pds-grid-full-column-end;
       margin: 0;
       padding: $pds-spacing-fluid-medium;
+    }
+
+    &__products {
+      margin: $pds-spacing-fluid-medium 0;
+      display: flex;
+      flex-direction: column;
+      row-gap: $pds-spacing-fluid-small;
+
+      a {
+        @include pds-text-small;
+        display: grid;
+        grid-template-columns: 4rem minmax(0, 1fr) auto;
+        gap: $pds-spacing-fluid-small;
+        align-items: center;
+        margin: 0 calc(#{$pds-spacing-fluid-small} * -1) !important;
+        padding: $pds-spacing-fluid-x-small $pds-spacing-fluid-small !important;
+        text-decoration: none !important;
+
+        b {
+          font-weight: $pds-font-weight-semi-bold;
+        }
+
+        img {
+          width: 100%;
+          height: auto;
+          display: block;
+        }
+      }
+    }
+
+    &__summary {
+      display: flex;
+      flex-direction: column;
+      gap: $pds-spacing-fluid-x-small;
+      margin-bottom: $pds-spacing-fluid-medium;
+      div {
+        display: flex;
+        justify-content: space-between;
+        p {
+          @include pds-text-small;
+        }
+      }
+      div:last-child {
+        margin-top: $pds-spacing-fluid-small;
+        p {
+          font-weight: bold;
+        }
+      }
     }
 
     /*@include pds-media-query-min('s') {
@@ -63,3 +196,30 @@
     }*/
   }
 }
+
+.color--disabled {
+  color: $pds-theme-light-state-disabled;
+}
+
+.heading-xx-large {
+  @include pds-heading-xx-large;
+}
+
+.heading-large {
+  @include pds-heading-large;
+}
+
+.text-small {
+  @include pds-text-small;
+}
+
+.text-x-small {
+  @include pds-text-x-small;
+}
+
+.text-xx-small {
+  @include pds-text-xx-small;
+}
+
+
+
