feat(shop-checkout): add anchor hover style | hj | #2884

--- a/patterns/shop-checkout/style.scss
+++ b/patterns/shop-checkout/style.scss
@@ -144,6 +144,8 @@ h1 {
 
       a {
         @include pds-text-small;
+        @include pds-hover;
+        color: currentcolor;
         display: grid;
         grid-template-columns: 4rem minmax(0, 1fr) auto;
         gap: $pds-spacing-fluid-small;
