--- a/patterns/shop-checkout/style.scss
+++ b/patterns/shop-checkout/style.scss
@@ -1,33 +1,24 @@
 @use '@porsche-design-system/components-js/styles' as *;
 
-p, h2 {
-  margin: 0;
-}
-
-h1 {
-  text-align: center;
-  margin: $pds-spacing-fluid-medium 0;
-}
-
-#app {
+.layout {
   @include pds-grid;
 
-  header {
-    grid-row-start: 1;
-    grid-column: $pds-grid-wide-column-start / $pds-grid-wide-column-end;
+  &__header {
+    grid-area: 1 / $pds-grid-wide-column-start / auto / $pds-grid-wide-column-end;
     display: grid;
     grid-template-columns: minmax(0, 1fr) auto minmax(0, 1fr);
     gap: $pds-spacing-fluid-small;
     align-items: center;
     margin-top: $pds-spacing-fluid-medium;
 
-    p-link-pure {
-      padding: $pds-spacing-static-x-small;
+    @include pds-media-query-min('s') {
+      grid-column-end: span 11;
     }
 
-    @include pds-media-query-min('s') {
-      grid-row-start: 1;
-      grid-column: $pds-grid-wide-column-start / span 11;
+    p-link-pure {
+      justify-self: flex-start;
+      padding: $pds-spacing-static-x-small;
+      margin-inline-start: calc(#{$pds-spacing-static-x-small} * -1);
     }
 
     p-wordmark {
@@ -43,130 +34,184 @@ h1 {
     }
   }
 
-  main {
+  &__main {
     grid-column: $pds-grid-wide-column-start / $pds-grid-wide-column-end;
+    display: flex;
+    flex-direction: column;
+    gap: $pds-spacing-fluid-large;
+    margin: $pds-spacing-fluid-medium 0 $pds-spacing-fluid-x-large;
 
     @include pds-media-query-min('s') {
-      grid-row-start: 2;
-      grid-column: $pds-grid-basic-column-start / span 7;
+      grid-area: 2 / $pds-grid-basic-column-start / auto / span 7;
     }
   }
 
-  aside {
+  &__aside {
     grid-area: 2 / $pds-grid-wide-column-start / auto / $pds-grid-wide-column-end;
+    display: flex;
+    justify-content: center;
     background: $pds-theme-light-background-surface;
     margin: 0 calc(#{$pds-grid-wide-offset-base} * -1);
-    padding: 0 $pds-grid-wide-offset-base;
+    padding: $pds-spacing-fluid-large $pds-grid-wide-offset-base;
 
     @include pds-media-query-min('s') {
-      grid-row: 1 / 3;
-      grid-column: span 6 / $pds-grid-full-column-end;
+      grid-area: 2 / span 7 / 3 / $pds-grid-full-column-end;
       margin: 0;
-      padding: $pds-spacing-fluid-medium;
+      padding: $pds-spacing-fluid-medium $pds-spacing-fluid-medium $pds-spacing-fluid-x-large;
+    }
+
+    @include pds-media-query-min('m') {
+      grid-column: span 6 / $pds-grid-full-column-end;
+    }
+  }
+
+  &::before {
+    @include pds-media-query-min('s') {
+      content: "";
+      grid-area: 1 / span 7 / 3 / $pds-grid-full-column-end;
+      background: $pds-theme-light-background-surface;
+    }
+
+    @include pds-media-query-min('m') {
+      grid-column: span 6 / $pds-grid-full-column-end;
     }
   }
 }
 
 .login {
-  margin: $pds-spacing-fluid-medium 0;
+  display: flex;
+  flex-direction: column;
+  gap: $pds-spacing-fluid-medium;
 
   &__inputs {
     display: flex;
     flex-direction: column;
     gap: $pds-spacing-fluid-small;
-    margin-top: $pds-spacing-fluid-small;
+
     &__actions {
       display: flex;
-      justify-content: space-between;
+      flex-direction: column;
+      gap: $pds-spacing-fluid-small;
+      margin-top: $pds-spacing-fluid-small;
+
+      @include pds-media-query-min('xs') {
+        flex-direction: row;
+        justify-content: space-between;
+      }
     }
   }
 
-  p-button {
-    width: 100%;
-    margin: $pds-spacing-fluid-medium 0;
-  }
-
-  p-button:last-child {
-    margin-bottom: 0;
+  &__footer {
+    display: flex;
+    flex-direction: column;
+    gap: $pds-spacing-fluid-medium;
   }
 
   &__divider {
-    display: flex;
-    flex-direction: row;
+    display: grid;
+    grid-template-columns: minmax(0px, 1fr) auto minmax(0px, 1fr);
     align-items: center;
-    p {
+
+    span {
       @include pds-text-x-small;
       text-transform: uppercase;
       padding: 0 $pds-spacing-fluid-medium;
-    }
-    p-divider {
-      width: 100%;
     }
   }
 }
 
 .checkout {
-  margin: $pds-spacing-fluid-medium 0;
-  section {
-    margin: $pds-spacing-fluid-medium 0;
+  display: flex;
+  flex-direction: column;
+  gap: $pds-spacing-fluid-large;
+
+  &__section {
+    display: flex;
+    flex-direction: column;
+    gap: $pds-spacing-fluid-medium;
   }
+
   &__heading {
     display: flex;
+    gap: $pds-spacing-fluid-small;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: $pds-spacing-fluid-medium;
-  }
-  &__inputs {
-    display: flex;
-    gap: $pds-spacing-fluid-small;
-    margin: $pds-spacing-fluid-medium 0;
-    flex-direction: column;
-    &__name {
-      display: flex;
-      gap: $pds-spacing-fluid-small;
-      p-text-field-wrapper {
-        width: 100%;
-      }
+
+    &--disabled {
+      color: $pds-theme-light-state-disabled;
+    }
+
+    h2 {
+      @include pds-heading-large;
+      margin: 0; // ua-style reset
     }
   }
-  p-radio-button-wrapper:not(:first-child) {
-    margin-top: $pds-spacing-fluid-x-small;
+
+  &__checkboxes,
+  &__radio-buttons,
+  &__inputs {
+    display: flex;
+    flex-direction: column;
+    gap: $pds-spacing-fluid-small;
   }
-  p-checkbox-wrapper {
-    margin-bottom: $pds-spacing-fluid-small;
-  }
-  p-button {
-    margin: $pds-spacing-fluid-medium 0;
+
+  &__group {
+    display: flex;
+    flex-direction: column;
+    gap: $pds-spacing-fluid-small;
+
+    @include pds-media-query-min('xs') {
+      flex-direction: row;
+
+      p-text-field-wrapper {
+        flex-grow: 1;
+      }
+    }
   }
 }
 
 .shopping-cart {
+  display: flex;
+  flex-direction: column;
+  gap: $pds-spacing-fluid-medium;
+  width: min(30rem, 100%);
+
   &__products {
-    margin: $pds-spacing-fluid-medium 0;
     display: flex;
     flex-direction: column;
-    row-gap: $pds-spacing-fluid-small;
+    gap: $pds-spacing-fluid-small;
 
     a {
       @include pds-text-small;
       @include pds-hover;
-      color: currentcolor;
+      @include pds-focus;
+      color: $pds-theme-light-primary;
       display: grid;
       grid-template-columns: 4rem minmax(0, 1fr) auto;
       gap: $pds-spacing-fluid-small;
       align-items: center;
-      margin: 0 calc(#{$pds-spacing-fluid-small} * -1) !important;
-      padding: $pds-spacing-fluid-x-small $pds-spacing-fluid-small !important;
-      text-decoration: none !important;
-
-      b {
-        font-weight: $pds-font-weight-semi-bold;
-      }
+      margin: 0 calc(#{$pds-spacing-fluid-small} * -1);
+      padding: $pds-spacing-fluid-x-small $pds-spacing-fluid-small;
+      text-decoration: none;
 
       img {
         width: 100%;
         height: auto;
         display: block;
+      }
+
+      span:first-of-type {
+        display: flex;
+        flex-direction: column;
+        @include pds-text-x-small;
+
+        b {
+          font-weight: $pds-font-weight-semi-bold;
+        }
+
+        span {
+          @include pds-text-xx-small;
+        }
       }
     }
   }
@@ -175,62 +220,15 @@ h1 {
     display: flex;
     flex-direction: column;
     gap: $pds-spacing-fluid-x-small;
-    margin-bottom: $pds-spacing-fluid-medium;
+
     div {
       display: flex;
+      gap: $pds-spacing-fluid-small;
       justify-content: space-between;
-      p {
-        @include pds-text-small;
-      }
-    }
-    div:last-child {
-      margin-top: $pds-spacing-fluid-small;
-      p {
-        font-weight: bold;
+
+      &:last-child {
+        margin-top: $pds-spacing-fluid-small;
       }
     }
   }
-
-  @include pds-media-query-min('s') {
-    padding: $pds-spacing-fluid-medium 0;
-    margin: $pds-spacing-fluid-medium 0;
-  }
-
-  /*@include pds-media-query-min('s') {
-    grid-column: span 5 / $pds-grid-wide-column-end;
-    margin-inline-end: calc(#{$pds-grid-wide-offset-s} * -1);
-    padding-inline-end: $pds-grid-wide-offset-s;
-  }
-
-  @include pds-media-query-min('xxl') {
-    margin-inline-end: calc(#{$pds-grid-wide-offset-xxl} * -1);
-    padding-inline-end: $pds-grid-wide-offset-xxl;
-  }*/
 }
-
-.color--disabled {
-  color: $pds-theme-light-state-disabled;
-}
-
-.heading-xx-large {
-  @include pds-heading-xx-large;
-}
-
-.heading-large {
-  @include pds-heading-large;
-}
-
-.text-small {
-  @include pds-text-small;
-}
-
-.text-x-small {
-  @include pds-text-x-small;
-}
-
-.text-xx-small {
-  @include pds-text-xx-small;
-}
-
-
-
