--- a/patterns/drive-homepage/style.scss
+++ b/patterns/drive-homepage/style.scss
@@ -62,11 +62,49 @@
     grid-column: $pds-grid-narrow-column-start / $pds-grid-narrow-column-end;
     grid-row: 1;
     display: flex;
+    flex-direction: column;
     align-items: center;
-    row-gap: $pds-spacing-fluid-medium;
+    row-gap: $pds-spacing-fluid-large;
 
     @include pds-media-query-min('xs') {
       margin-top: min(40vw, 1024px); // limit margin >=2560px
+    }
+
+    .steps {
+      display: flex;
+      gap: $pds-spacing-fluid-medium;
+
+      @include pds-media-query-max('m') {
+        display: none;
+      }
+
+      &__item {
+        display: flex;
+        align-items: center;
+        gap: $pds-spacing-static-x-small;
+        color: $pds-theme-dark-primary;
+        white-space: nowrap;
+
+        &::before {
+          content: "";
+          display: block;
+          height: $pds-font-line-height;
+          width: $pds-font-line-height;
+          flex-shrink: 0;
+        }
+        &:nth-of-type(1)::before {
+          background-image: url("data:image/svg+xml;charset=UTF-8,<svg xmlns=\"http://www.w3.org/2000/svg\" viewBox=\"0 0 24 24\"><circle fill=\"%23FBFCFF\" stroke-width=\"1px\" cx=\"12\" cy=\"12\" r=\"9\"/><path fill=\"%23010205\" d=\"m12.33 8.67-2.43.91v-.94l2.6-1.03h.85v8.78h-1.02z\"/></svg>");
+        }
+        &:nth-of-type(2)::before {
+          background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><circle fill="%23FBFCFF" stroke-width="1px" cx="12" cy="12" r="9"/><path fill="%23010205" d="m9.46 15.58c0-1.35.73-2.07 1.7-2.72l.95-.63c.78-.52 1.57-1.05 1.57-2.24 0-1.12-.62-1.58-1.7-1.58s-1.68.48-1.78 1.97h-.96c.06-1.82.78-2.91 2.74-2.91s2.72.92 2.72 2.52-.92 2.23-1.79 2.8l-.95.63c-1.11.75-1.52 1.18-1.52 2.01v.16h4.17v.81h-5.15v-.81z"/></svg>')
+        }
+        &:nth-of-type(3)::before {
+          background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><circle fill="%23FBFCFF" stroke-width="1px" cx="12" cy="12" r="9"/><path fill="%23010205" d="m10.1 13.73c.1 1.43.63 2 1.92 2 1.2 0 1.8-.49 1.8-1.68 0-1.08-.51-1.66-1.8-1.66h-.89v-.9h.83c1.12 0 1.66-.56 1.66-1.53 0-1.08-.64-1.55-1.73-1.55s-1.69.49-1.79 1.97h-.97c.1-1.79.84-2.91 2.76-2.91s2.74.92 2.74 2.49c0 .79-.38 1.54-1.16 1.9.84.28 1.36.92 1.36 2.19 0 1.54-.97 2.49-2.81 2.49-1.96 0-2.8-.9-2.88-2.81z"/></svg>')
+        }
+        &:nth-of-type(4)::before {
+          background-image: url("data:image/svg+xml;charset=UTF-8,<svg xmlns=\"http://www.w3.org/2000/svg\" viewBox=\"0 0 24 24\"><circle fill=\"%23FBFCFF\" stroke-width=\"1px\" cx=\"12\" cy=\"12\" r=\"9\"/><path fill=\"%23010205\" d=\"m8.87 13.6 3.54-5.99h1.43v5.89h1.25v.86h-1.25v2.02h-.99v-2.02h-3.98zm3.98-.1v-4.98l-2.91 4.98z\"/></svg>");
+        }
+      }
     }
   }
 }
