--- a/patterns/drive-homepage/style.scss
+++ b/patterns/drive-homepage/style.scss
@@ -24,20 +24,6 @@
   }
 }
 
-// mood
-.mood {
-  grid-column: basic-start / var(--pds-grid-basic-span-one-half);
-  aspect-ratio: 3 / 4;
-
-  img {
-    display: block;
-    width: 100%;
-    height: 100%;
-    border-radius: $pds-border-radius-large;
-    object-fit: cover;
-  }
-}
-
 /**
  * sections
  */
@@ -158,6 +144,65 @@
   p-heading:first-child {
     grid-column: $pds-grid-narrow-column-start / $pds-grid-narrow-column-end;
     justify-self: center;
+  }
+
+  &__item {
+    display: grid;
+    grid-column: 1 / -1;
+    grid-template-columns: subgrid;
+    grid-auto-flow: column;
+
+    .mood {
+      grid-column: basic-start / basic-end;
+      aspect-ratio: 4 / 3;
+      img {
+        display: block;
+        width: 100%;
+        height: 100%;
+        border-radius: $pds-border-radius-large;
+        object-fit: cover;
+      }
+    }
+    .text {
+      grid-column: basic-start / basic-end;
+    }
+
+    @include pds-media-query-max('xs') {
+      .text {
+        margin-block: $pds-spacing-fluid-medium;
+      }
+    }
+
+    @include pds-media-query-min('xs') {
+      .mood {
+        grid-column: basic-start / var(--pds-grid-basic-span-one-half);
+      }
+      .text {
+        margin-block: auto;
+        grid-column: var(--pds-grid-basic-span-one-half) / basic-end;
+      }
+    }
+
+    @include pds-media-query-min('s') {
+      &:not(:nth-of-type(1)) {
+        margin-top: -50px;
+      }
+      .mood {
+        aspect-ratio: 3 / 4;
+        grid-column: basic-start / var(--pds-grid-basic-span-one-half);
+      }
+      .text {
+        grid-column: 11 / span 4;
+      }
+      &:nth-child(odd) {
+        .mood {
+          grid-column: var(--pds-grid-basic-span-one-half) / basic-end;
+        }
+        .text {
+          grid-column: 5 / span 4;
+        }
+      }
+    }
   }
 }
 
